# opencl-nn

./: CMakeLists.txt  README.md
cl/: simple_add.cl  utils.cl  vanilla_nn_kernel.cl
demo/: loadmnist.cpp  loadxor.cpp  main.cpp  mnist.cpp  mnistdata.hpp  xor.cpp  xordata.hpp
include/: clwrapper.hpp  kernels.hpp  lazyml.hpp  utils.hpp
include/math/: math.hpp
include/model/: model.hpp  vnn.hpp
src/: clwrapper.cpp  kernels.cpp  utils.cpp
src/model/: vnn.cpp
